--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -84,7 +84,7 @@
                     <div class="form-check me-3">
                         <input type="radio" id="No" name="bodyweight_exercises" value="Weighted"
                             class="form-check-input">
-                        <label for="No" class="form-check-label">I would like to add weight</label>
+                        <label for="No" class="form-check-label">I would like to progressively add weight</label>
                     </div>
                     <div class="form-check me-3">
                         <input type="radio" id="Yes" name="bodyweight_exercises" value="Bodyweight"
