--- a/website/templates/generated_plans.html
+++ b/website/templates/generated_plans.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h1 class="text-center mb-4" style="color: var(--bs-primary);">Workout Routine(s)</h1>
+    <h1 class="text-center mb-4 text-primary">Workout Routine(s)</h1>
 
     {% if plans %}
     <div id="workoutCarousel" class="carousel slide" data-bs-ride="false">
@@ -13,13 +13,13 @@
             <div class="carousel-item {% if loop.first %}active{% endif %}">
                 <div class="card mx-auto" style="max-width: 500px;">
                     <div class="card-header text-center">
-                        <h5 class="card-title">{{ plan.split_name }}</h5>
+                        <h5 class="card-title text-primary">{{ plan.split_name }}</h5>
                     </div>
                     <div class="card-body">
                         <ul class="list-group">
                             {% for day in plan.days %}
-                            <li class="list-group-item border-top mb-4"> <!-- Added margin bottom for space between days -->
-                                <strong class="mb-2 d-block">{{ day.name }}</strong> <!-- Added margin bottom for spacing between title and exercises -->
+                            <li class="list-group-item border-top mb-4">
+                                <strong class="mb-2 d-block text-primary">{{ day.name }}</strong>
                                 <ul>
                                     {% for exercise in day.exercises %}
                                     <li class="list-group-item">
@@ -35,14 +35,13 @@
                             {% endfor %}
                         </ul>
                     </div>
-                    <div class="card-footer text-center d-flex justify-content-center align-items-center">
+                    <div class="card-footer text-center">
                         <form method="POST" action="{{ url_for('views.save_plan') }}">
                             <input type="hidden" name="split_name" value="{{ plan.split_name }}">
                             <input type="hidden" name="plan_data" id="plan_data_{{ loop.index }}">
-                            <button type="submit" class="btn btn-theme">Save</button>
+                            <button type="submit" class="btn btn-lg btn-primary">Save</button>
                         </form>
-                    </div>
-                </div>
+                    </div>                </div>
             </div>
             {% endfor %}
         </div>
@@ -59,7 +58,7 @@
         {% endif %}
     </div>
     {% else %}
-    <p class="text-center">No workout plans available. Please generate a plan first.</p>
+    <p class="text-center text-primary">No workout plans available. Please generate a plan first.</p>
     {% endif %}
 </div>
 
