--- a/website/templates/saved_plans.html
+++ b/website/templates/saved_plans.html
@@ -13,7 +13,7 @@
             <div class="carousel-item {% if loop.first %}active{% endif %}">
                 <div class="card mx-auto" style="max-width: 500px;">
                     <div class="card-header text-center">
-                        <h5 class="card-title" data-bs-toggle="modal" data-bs-target="#renamePlanModal" data-plan-id="{{ plan.id }}" data-current-name="{{ plan.split_name }}">
+                        <h5 class="card-title text-primary" data-bs-toggle="modal" data-bs-target="#renamePlanModal" data-plan-id="{{ plan.id }}" data-current-name="{{ plan.split_name }}">
                             {{ plan.split_name }}
                         </h5>
                     </div>
@@ -21,7 +21,7 @@
                         <ul class="list-group">
                             {% for day in plan.get_plan_data().days %}
                             <li class="list-group-item border-top mb-4"> <!-- Added margin bottom for space between days -->
-                                <strong class="mb-2 d-block">{{ day.name }}</strong> <!-- Added margin bottom for spacing between title and exercises -->
+                                <strong class="mb-2 d-block text-primary">{{ day.name }}</strong> <!-- Added margin bottom for spacing between title and exercises -->
                                 <ul>
                                     {% for exercise in day.exercises %}
                                     <li class="list-group-item" data-bs-toggle="modal" data-bs-target="#exerciseModal"
@@ -42,14 +42,14 @@
                         </ul>
                     </div>
 
-                    <div class="card-footer text-center">
-                        <!-- Delete Form -->
-                        <form method="POST" action="{{ url_for('views.delete_plan', plan_id=plan.id) }}" style="display:inline;">
-                            <button type="submit" class="btn btn-danger"
-                                onclick="return confirm('Are you sure you want to delete this plan?');">Delete</button>
-                        </form>
-                    </div>
-
+<!-- Card Footer Delete Button -->
+<div class="card-footer text-center">
+    <!-- Delete Form -->
+    <form method="POST" action="{{ url_for('views.delete_plan', plan_id=plan.id) }}" style="display:inline;">
+        <button type="submit" class="btn btn-lg btn-primary"
+            onclick="return confirm('Are you sure you want to delete this plan?');">Delete</button>
+    </form>
+</div>
                 </div>
             </div>
             {% endfor %}
