--- a/website/templates/saved_plans.html
+++ b/website/templates/saved_plans.html
@@ -13,26 +13,31 @@
             <div class="carousel-item {% if loop.first %}active{% endif %}">
                 <div class="card mx-auto" style="max-width: 500px;">
                     <div class="card-header text-center">
-                        <h5 class="card-title text-primary" data-bs-toggle="modal" data-bs-target="#renamePlanModal" data-plan-id="{{ plan.id }}" data-current-name="{{ plan.split_name }}">
+                        <h5 class="card-title text-primary" data-bs-toggle="modal" data-bs-target="#renamePlanModal"
+                            data-plan-id="{{ plan.id }}" data-current-name="{{ plan.split_name }}">
                             {{ plan.split_name }}
                         </h5>
                     </div>
                     <div class="card-body">
                         <ul class="list-group">
                             {% for day in plan.get_plan_data().days %}
-                            <li class="list-group-item border-top mb-4"> <!-- Added margin bottom for space between days -->
-                                <strong class="mb-2 d-block text-primary">{{ day.name }}</strong> <!-- Added margin bottom for spacing between title and exercises -->
+                            <li class="list-group-item border-top mb-4">
+                                <!-- Added margin bottom for space between days -->
+                                <strong class="mb-2 d-block text-primary">{{ day.name }}</strong>
+                                <!-- Added margin bottom for spacing between title and exercises -->
                                 <ul>
                                     {% for exercise in day.exercises %}
                                     <li class="list-group-item" data-bs-toggle="modal" data-bs-target="#exerciseModal"
                                         data-exercise-id="{{ exercise.id }}" data-exercise-name="{{ exercise.name }}"
                                         data-exercise-role="{{ exercise.role.name }}" data-sets="{{ exercise.sets }}"
-                                        data-start-reps="{{ exercise.start_reps }}" data-end-reps="{{ exercise.end_reps }}" data-plan-id="{{ plan.id }}">
-                                        
+                                        data-start-reps="{{ exercise.start_reps }}"
+                                        data-end-reps="{{ exercise.end_reps }}" data-plan-id="{{ plan.id }}">
+
                                         {% if exercise.toFailure %}
-                                            {{ exercise.name }} : {{ exercise.sets }} x AMRAP
+                                        {{ exercise.name }} : {{ exercise.sets }} x AMRAP
                                         {% else %}
-                                            {{ exercise.name }} : {{ exercise.sets }} x {{ exercise.start_reps }}–{{ exercise.end_reps }}
+                                        {{ exercise.name }} : {{ exercise.sets }} x {{ exercise.start_reps }}–{{
+                                        exercise.end_reps }}
                                         {% endif %}
                                     </li>
                                     {% endfor %}
@@ -42,27 +47,30 @@
                         </ul>
                     </div>
 
-<!-- Card Footer Delete Button -->
-<div class="card-footer text-center">
-    <!-- Delete Form -->
-    <form method="POST" action="{{ url_for('views.delete_plan', plan_id=plan.id) }}" style="display:inline;">
-        <button type="submit" class="btn btn-lg btn-primary"
-            onclick="return confirm('Are you sure you want to delete this plan?');">Delete</button>
-    </form>
-</div>
+                    <!-- Card Footer Delete Button -->
+                    <div class="card-footer text-center">
+                        <!-- Delete Form -->
+                        <form method="POST" action="{{ url_for('views.delete_plan', plan_id=plan.id) }}"
+                            style="display:inline;">
+                            <button type="submit" class="btn btn-lg btn-primary"
+                                onclick="return confirm('Are you sure you want to delete this plan?');">Delete</button>
+                        </form>
+                    </div>
                 </div>
             </div>
             {% endfor %}
         </div>
+
         {% if 1 < plans|length %}
-        <button class="carousel-control-prev" type="button" data-bs-target="#workoutCarousel" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#workoutCarousel"
+            data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#workoutCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#workoutCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         {% endif %}
     </div>
 
@@ -115,7 +123,8 @@
     </div>
 
     <!-- Modal for Editing Plan Name -->
-    <div class="modal fade" id="renamePlanModal" tabindex="-1" aria-labelledby="renamePlanModalLabel" aria-hidden="true">
+    <div class="modal fade" id="renamePlanModal" tabindex="-1" aria-labelledby="renamePlanModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <form method="POST" action="{{ url_for('views.rename_plan') }}">
@@ -137,7 +146,7 @@
             </div>
         </div>
     </div>
-    
+
     {% else %}
     <p class="text-center">No workout plans available. Please generate a plan first.</p>
     {% endif %}
