has priority method

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -46,7 +46,7 @@
         <div class="card mb-4 shadow-sm">
             <div class="card-body">
                 <h5 class="card-title">Available Equipment</h5>
-                <p class="card-text">Select the equipment you have access to, so we can tailor your workout plan.</p>
+                <p class="card-text">Select the equipment you have access to, or just prefer.</p>
 
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
@@ -221,4 +221,5 @@
     });
 </script>
 
+    
 {% endblock %}
